actualizan ventas controller y swagger
